<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SafeAnchorage</string>
    <string name="action_settings">Settings</string>
    <string name="boat_length">Boat length</string>
    <string name="chain_length">Chain length</string>
    <string name="anchored">Anchored</string>
    <string name="please_fill_lengths">Please input the lengths fields</string>
    <string name="anchor_info">For best results, enable when you drop the anchor.</string>
    <string name="alert_radius">Radius gap before alarm</string>
    <string name="unit">meters</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="anchorage_ready">Ready to check anchor radius</string>
    <string name="anchorage_alert">Anchorage radius reached !</string>

    <string-array name="radiuses">
        <item>5</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
    </string-array>

</resources>
