<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".MainActivity"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >

            <TextView
                android:text="@string/alert_radius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <Spinner
                android:id="@+id/alert_radius"
                android:paddingLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:inputType="number"
                tools:ignore="RtlHardcoded"
                android:entries="@array/radiuses"
                />

            <TextView
                android:text="@string/unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <Switch
            android:id="@+id/anchor"
            android:text="@string/anchored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:layout_gravity="center"
            android:textOn="@string/yes"
            android:textOff="@string/no"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/anchor_info"
            android:textStyle="italic"
            android:gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/debug_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:background="@android:color/holo_blue_dark"
        >

        <TextView
            android:id="@+id/anchor_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1,1"
            />

        <TextView
            android:id="@+id/current_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="2,2"
            />

        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1m"
            />

    </LinearLayout>
</FrameLayout>